# mimo-borsa-arastirma

./: .cursorrules  .env.example  .gitignore  README.md  backtest_v7.py  botu_baslat.bat  config.yaml  config_live_v65.yaml  config_live_v6mr.yaml  config_v1.yaml  config_v21.yaml  config_v3.yaml  config_v4.yaml  config_v5.yaml  config_v7.yaml  dashboard_baslat.bat  izleyici_baslat.bat  izleyiciyi_baslat.bat  live_v5.py  live_v65.py  live_v6mr.py  live_v7.py  main_v21.py  main_v3.py  main_v4.py  pyproject.toml  requirements.txt  requirements_dashboard.txt  run_all.py  run_all_bots.py  run_backtest.py  setup.py  train_ml.py  version_manager.py
dashboard/: __init__.py  app.py  callbacks.py  chart_engine.py  data_provider.py  layout.py
dashboard/assets/: style.css
docs/: bot_strategy.md  teknik_analiz_baslangic_ozeti.md
models/: signal_classifier.pkl
src/: __init__.py
src/backtest/: __init__.py  engine.py  report.py
src/bot/: __init__.py  engine.py  scheduler.py
src/config/: __init__.py  settings.py
src/execution/: __init__.py  engine.py  models.py
src/risk/: __init__.py  engine.py
src/signal/: __init__.py  generator.py  journal.py  models.py
src/strategy/: __init__.py  adaptive_learner.py  feature_weights.py  ml_filter.py  regime_detector.py  smc_utils.py  v3_pa_strategy.py  v4_pa_strategy.py  v5_pa_strategy.py  v6_grid.py  v6_mean_rev.py  v6_pa_strategy.py  v6_trend.py  (+1 more)
tests/: __init__.py  test_ai_analyzer.py  test_bot_engine.py  test_collector.py  test_execution_engine.py  test_risk_engine.py  test_signal_generator.py  test_technical_engine.py
(+10 files in other folders)
