[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mimo-borsa-arastirma"
version = "1.0.0"
description = "MIMO Borsa Arastirma ve Trading Botu"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "yasar-afk"}
]
dependencies = [
    "ccxt==4.3.89",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "ta==0.11.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "APScheduler==3.10.4",
    "colorlog==6.8.2",
    "scikit-learn==1.4.2",
    "joblib==1.4.0",
]

[project.scripts]
mimo-borsa = "main:main"
